--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -126,7 +126,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - id: head-version
-        name: extract current diff
+        name: check HEAD node version
         run: |
           NODE_VERSION=$(find . -name "*.yml" -exec grep -oh "using: 'node[0-9][0-9]\|using: node[0-9][0-9]" {} \; | sed -e "s/using: '//g" -e "s/using: //g" | sort | uniq)
           echo "NODE_VERSION: ${NODE_VERSION}"
@@ -137,7 +137,7 @@ jobs:
           echo "node_version=${NODE_VERSION}" >> $GITHUB_OUTPUT
 
       - id: checkout-base
-        if: ${{ startsWith(github.ref_name, 'nickfyson') }}
+        if: ${{ startsWith(github.ref_name, 'sdf_nickfyson') }}
         uses: actions/checkout@v4
         with:
           ref: ${{ env.BASE_REF }}
