remove dedundant single quotes from node version strings

--- a/init/action.yml
+++ b/init/action.yml
@@ -109,6 +109,6 @@ outputs:
   codeql-path:
     description: The path of the CodeQL binary used for analysis
 runs:
-  using: 'node20'
+  using: node20
   main: '../lib/init-action.js'
   post: '../lib/init-action-post.js'
