--- a/.github/workflows/__go-tracing-autobuilder.yml
+++ b/.github/workflows/__go-tracing-autobuilder.yml
@@ -88,7 +88,8 @@ jobs:
       run: echo "CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT=true" >> $GITHUB_ENV
     - uses: actions/setup-go@v5
       with:
-        go-version: ~1.21.1
+        go-version: ~1.22.0
+        cache: false
     - uses: ./../action/init
       with:
         languages: go
