--- a/pr-checks/checks/go-tracing-autobuilder.yml
+++ b/pr-checks/checks/go-tracing-autobuilder.yml
@@ -6,7 +6,8 @@ env:
 steps:
   - uses: actions/setup-go@v5
     with:
-      go-version: "~1.21.1"
+      go-version: "~1.22.0"
+      cache: false
   - uses: ./../action/init
     with:
       languages: go
