Document action.inputs.token

--- a/autobuild/action.yml
+++ b/autobuild/action.yml
@@ -3,6 +3,8 @@ description: 'Attempt to automatically build code'
 author: 'GitHub'
 inputs:
   token:
+    description: "GitHub token to use for authenticating with this instance of GitHub. The token needs the `security-events: write` permission."
+    required: false
     default: ${{ github.token }}
   matrix:
     default: ${{ toJson(matrix) }}
