--- a/analyze/action.yml
+++ b/analyze/action.yml
@@ -69,6 +69,8 @@ inputs:
     required: true
     default: "true"
   token:
+    description: "GitHub token to use for authenticating with this instance of GitHub. The token needs the `security-events: write` permission."
+    required: false
     default: ${{ github.token }}
   matrix:
     default: ${{ toJson(matrix) }}
