--- a/init/action.yml
+++ b/init/action.yml
@@ -20,9 +20,12 @@ inputs:
       - none:      The database will be created without building the source code.
                    Available for all interpreted languages and some compiled languages.
       - autobuild: The database will be created by attempting to automatically build the source code.
+                   To use this build mode, ensure that your workflow calls the `autobuild` action
+                   between the `init` and `analyze` steps.
                    Available for all compiled languages.
       - manual:    The database will be created by building the source code using a manually specified
-                   build command. Available for all compiled languages.
+                   build command. To use this build mode, specify manual build steps in your workflow
+                   between the `init` and `analyze` steps. Available for all compiled languages.
     required: false
   token:
     description: GitHub token to use for authenticating with this instance of GitHub. To download custom packs from multiple registries, use the registries input.
