--- a/pr-checks/checks/build-mode-none.yml
+++ b/pr-checks/checks/build-mode-none.yml
@@ -20,5 +20,8 @@ steps:
         exit 1
       fi
 
+  # The latest nightly supports omitting the autobuild Action when the build mode is specified.
   - uses: ./../action/autobuild
+    if: matrix.version != 'nightly-latest'
+
   - uses: ./../action/analyze
