--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # Ignore for example failing-tests.json from AVA
-node_modules/.cache
+node_modules/.cache/
+# Java build files
+.gradle/
+*.class
+# macOS
+.DS_Store
