--- a/.github/workflows/__go-tracing-custom-build-steps.yml
+++ b/.github/workflows/__go-tracing-custom-build-steps.yml
@@ -89,6 +89,8 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version: ~1.22.0
+      # to avoid potentially misleading autobuilder results where we expect it to download
+      # dependencies successfully, but they actually come from a warm cache
         cache: false
     - uses: ./../action/init
       with:
