--- a/init/action.yml
+++ b/init/action.yml
@@ -7,11 +7,11 @@ inputs:
     required: false
     # If not specified the Action will check in several places until it finds the CodeQL tools.
   languages:
-    description: |
+    description: >-
       A comma-separated list of CodeQL languages to analyze.
 
       Due to the performance benefit of parallelizing builds, we recommend specifying languages to
-      analyze using a matrix and providing `${{ matrix.language }}` as this input.
+      analyze using a matrix and providing `\$\{{ matrix.language }}` as this input.
 
       For more information, see
       https://docs.github.com/en/code-security/code-scanning/creating-an-advanced-setup-for-code-scanning/customizing-your-advanced-setup-for-code-scanning#changing-the-languages-that-are-analyzed.
