Run integration test PR checks nightly
Scheduled for 5AM UTC. This will assist in catching bugs introduced with new runner images.

--- a/.github/workflows/__autobuild-action.yml
+++ b/.github/workflows/__autobuild-action.yml
@@ -19,6 +19,8 @@ on:
     - synchronize
     - reopened
     - ready_for_review
+  schedule:
+  - cron: '0 5 * * *'
   workflow_dispatch: {}
 jobs:
   autobuild-action:
