--- a/.github/workflows/query-filters.yml
+++ b/.github/workflows/query-filters.yml
@@ -11,6 +11,8 @@ on:
     - synchronize
     - reopened
     - ready_for_review
+  schedule:
+    - cron: '0 5 * * *'
   workflow_dispatch: {}
 
 jobs:
