--- a/.github/workflows/__go-tracing-autobuilder.yml
+++ b/.github/workflows/__go-tracing-autobuilder.yml
@@ -28,13 +28,9 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            version: stable-20221211
+            version: stable-20230403
           - os: macos-latest
-            version: stable-20221211
-          - os: ubuntu-latest
-            version: stable-20230418
-          - os: macos-latest
-            version: stable-20230418
+            version: stable-20230403
           - os: ubuntu-latest
             version: stable-v2.13.5
           - os: macos-latest
@@ -43,6 +39,14 @@ jobs:
             version: stable-v2.14.6
           - os: macos-latest
             version: stable-v2.14.6
+          - os: ubuntu-latest
+            version: stable-v2.15.5
+          - os: macos-latest
+            version: stable-v2.15.5
+          - os: ubuntu-latest
+            version: stable-v2.16.6
+          - os: macos-latest
+            version: stable-v2.16.6
           - os: ubuntu-latest
             version: default
           - os: macos-latest
@@ -67,9 +71,7 @@ jobs:
         if: >-
           matrix.os == 'macos-latest' && (
 
-          matrix.version == 'stable-20221211' ||
-
-          matrix.version == 'stable-20230418' ||
+          matrix.version == 'stable-20230403' ||
 
           matrix.version == 'stable-v2.13.5' ||
 
@@ -84,10 +86,6 @@ jobs:
         with:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'false'
-      - name: Set environment variable for Swift enablement
-        if: runner.os != 'Windows' && matrix.version == '20221211'
-        shell: bash
-        run: echo "CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT=true" >> $GITHUB_ENV
       - uses: actions/setup-go@v5
         with:
           go-version: ~1.22.0
