--- a/.github/workflows/__remote-config.yml
+++ b/.github/workflows/__remote-config.yml
@@ -28,17 +28,11 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            version: stable-20221211
+            version: stable-20230403
           - os: macos-latest
-            version: stable-20221211
+            version: stable-20230403
           - os: windows-latest
-            version: stable-20221211
-          - os: ubuntu-latest
-            version: stable-20230418
-          - os: macos-latest
-            version: stable-20230418
-          - os: windows-latest
-            version: stable-20230418
+            version: stable-20230403
           - os: ubuntu-latest
             version: stable-v2.13.5
           - os: macos-latest
@@ -51,6 +45,18 @@ jobs:
             version: stable-v2.14.6
           - os: windows-latest
             version: stable-v2.14.6
+          - os: ubuntu-latest
+            version: stable-v2.15.5
+          - os: macos-latest
+            version: stable-v2.15.5
+          - os: windows-latest
+            version: stable-v2.15.5
+          - os: ubuntu-latest
+            version: stable-v2.16.6
+          - os: macos-latest
+            version: stable-v2.16.6
+          - os: windows-latest
+            version: stable-v2.16.6
           - os: ubuntu-latest
             version: default
           - os: macos-latest
@@ -81,9 +87,7 @@ jobs:
         if: >-
           matrix.os == 'macos-latest' && (
 
-          matrix.version == 'stable-20221211' ||
-
-          matrix.version == 'stable-20230418' ||
+          matrix.version == 'stable-20230403' ||
 
           matrix.version == 'stable-v2.13.5' ||
 
@@ -98,10 +102,6 @@ jobs:
         with:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'false'
-      - name: Set environment variable for Swift enablement
-        if: runner.os != 'Windows' && matrix.version == '20221211'
-        shell: bash
-        run: echo "CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT=true" >> $GITHUB_ENV
       - uses: ./../action/init
         with:
           tools: ${{ steps.prepare-test.outputs.tools-url }}
