Disable fail fast

--- a/.github/workflows/__autobuild-action.yml
+++ b/.github/workflows/__autobuild-action.yml
@@ -33,6 +33,7 @@ jobs:
             version: latest
           - os: windows-latest
             version: latest
+      fail-fast: false
     name: autobuild-action
     permissions:
       contents: read
