--- a/.github/workflows/__go-custom-queries.yml
+++ b/.github/workflows/__go-custom-queries.yml
@@ -75,6 +75,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
+      fail-fast: false
     name: 'Go: Custom queries'
     permissions:
       contents: read
