--- a/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
+++ b/.github/workflows/__go-indirect-tracing-workaround-diagnostic.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: stable-v2.14.6
+      fail-fast: false
     name: 'Go: diagnostic when Go is changed after init step'
     permissions:
       contents: read
