--- a/.github/workflows/__language-aliases.yml
+++ b/.github/workflows/__language-aliases.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: latest
+      fail-fast: false
     name: Language aliases
     permissions:
       contents: read
