--- a/.github/workflows/__submit-sarif-failure.yml
+++ b/.github/workflows/__submit-sarif-failure.yml
@@ -33,6 +33,7 @@ jobs:
             version: default
           - os: ubuntu-latest
             version: nightly-latest
+      fail-fast: false
     name: Submit SARIF after failure
     permissions:
       contents: read
