--- a/.github/workflows/__build-mode-none.yml
+++ b/.github/workflows/__build-mode-none.yml
@@ -31,6 +31,7 @@ jobs:
             version: latest
           - os: ubuntu-latest
             version: nightly-latest
+      fail-fast: false
     name: Build mode none
     permissions:
       contents: read
