--- a/.github/workflows/__cpp-deptrace-disabled.yml
+++ b/.github/workflows/__cpp-deptrace-disabled.yml
@@ -33,6 +33,7 @@ jobs:
             version: default
           - os: ubuntu-latest
             version: nightly-latest
+      fail-fast: false
     name: 'C/C++: disabling autoinstalling dependencies (Linux)'
     permissions:
       contents: read
