--- a/.github/workflows/__cpp-deptrace-enabled-on-macos.yml
+++ b/.github/workflows/__cpp-deptrace-enabled-on-macos.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: macos-latest
             version: nightly-latest
+      fail-fast: false
     name: 'C/C++: autoinstalling dependencies is skipped (macOS)'
     permissions:
       contents: read
