--- a/.github/workflows/__go-tracing-custom-build-steps.yml
+++ b/.github/workflows/__go-tracing-custom-build-steps.yml
@@ -59,6 +59,7 @@ jobs:
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
+      fail-fast: false
     name: 'Go: tracing with custom build steps'
     permissions:
       contents: read
