--- a/.github/workflows/__go-tracing-legacy-workflow.yml
+++ b/.github/workflows/__go-tracing-legacy-workflow.yml
@@ -59,6 +59,7 @@ jobs:
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
+      fail-fast: false
     name: 'Go: tracing with legacy workflow'
     permissions:
       contents: read
