--- a/.github/workflows/__ruby.yml
+++ b/.github/workflows/__ruby.yml
@@ -39,6 +39,7 @@ jobs:
             version: nightly-latest
           - os: macos-latest
             version: nightly-latest
+      fail-fast: false
     name: Ruby analysis
     permissions:
       contents: read
