--- a/.github/workflows/__remote-config.yml
+++ b/.github/workflows/__remote-config.yml
@@ -29,19 +29,19 @@ jobs:
         include:
           - os: ubuntu-latest
             version: stable-20230403
-          - os: macos-latest
+          - os: macos-12
             version: stable-20230403
           - os: windows-latest
             version: stable-20230403
           - os: ubuntu-latest
             version: stable-v2.13.5
-          - os: macos-latest
+          - os: macos-12
             version: stable-v2.13.5
           - os: windows-latest
             version: stable-v2.13.5
           - os: ubuntu-latest
             version: stable-v2.14.6
-          - os: macos-latest
+          - os: macos-12
             version: stable-v2.14.6
           - os: windows-latest
             version: stable-v2.14.6
