--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -29,7 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: stable-v2.13.4
-          - os: macos-latest
+          - os: macos-12
             version: stable-v2.13.4
           - os: windows-latest
             version: stable-v2.13.4
