Disable `fail-fast` (temporary)
Just so we can see all CLI versions that are failing on `macos-12`

--- a/.github/workflows/__config-export.yml
+++ b/.github/workflows/__config-export.yml
@@ -39,6 +39,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
+    fail-fast: false
     name: Config export
     permissions:
       contents: read
