--- a/.github/workflows/__javascript-source-root.yml
+++ b/.github/workflows/__javascript-source-root.yml
@@ -33,6 +33,7 @@ jobs:
             version: default
           - os: ubuntu-latest
             version: nightly-latest
+    fail-fast: false
     name: Custom source root
     permissions:
       contents: read
