--- a/.github/workflows/__test-local-codeql.yml
+++ b/.github/workflows/__test-local-codeql.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: nightly-latest
+    fail-fast: false
     name: Local CodeQL bundle
     permissions:
       contents: read
