--- a/.github/workflows/__build-mode-autobuild.yml
+++ b/.github/workflows/__build-mode-autobuild.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: nightly-latest
+    fail-fast: false
     name: Build mode autobuild
     permissions:
       contents: read
