--- a/.github/workflows/__config-input.yml
+++ b/.github/workflows/__config-input.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: latest
+    fail-fast: false
     name: Config input
     permissions:
       contents: read
