--- a/.github/workflows/__cpp-deptrace-enabled.yml
+++ b/.github/workflows/__cpp-deptrace-enabled.yml
@@ -33,6 +33,7 @@ jobs:
             version: default
           - os: ubuntu-latest
             version: nightly-latest
+    fail-fast: false
     name: 'C/C++: autoinstalling dependencies (Linux)'
     permissions:
       contents: read
