--- a/.github/workflows/__export-file-baseline-information.yml
+++ b/.github/workflows/__export-file-baseline-information.yml
@@ -33,6 +33,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
+    fail-fast: false
     name: Export file baseline information
     permissions:
       contents: read
