--- a/.github/workflows/__init-with-registries.yml
+++ b/.github/workflows/__init-with-registries.yml
@@ -45,6 +45,7 @@ jobs:
             version: nightly-latest
           - os: windows-latest
             version: nightly-latest
+    fail-fast: false
     name: 'Packaging: Download using registries'
     permissions:
       contents: read
