--- a/.github/workflows/__test-autobuild-working-dir.yml
+++ b/.github/workflows/__test-autobuild-working-dir.yml
@@ -29,6 +29,7 @@ jobs:
         include:
           - os: ubuntu-latest
             version: latest
+    fail-fast: false
     name: Autobuild working directory
     permissions:
       contents: read
